# StarWars

./: Cargo.toml  README.md
src/: api.rs  handlers.rs  main.rs
src/api/: api_tools.rs  models.rs
src/handlers/: terminal.rs  user_request.rs
