[package]
name = "star_wars"
version = "0.1.0"
authors = ["Abdulsemiu Atanda <semiu@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="star_wars"
path="src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
loading = "*"
chrono = "0.4"
console = "0.14.1"
dialoguer = "0.8.0"
